Fixed overflow-x on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {color: #081323; overflow-x: hidden}
 
 .Hero {
